src/main/java/com/example/transfolio/common/error/ErrorObj.java
package com.example.transfolio.common.error;

public class ErrorObj {


    public ErrorObj(Enum errorEnum) {
        System.out.println("errorEnum = " + errorEnum);


    }
}
